[gd_scene load_steps=6 format=3 uid="uid://w8hnook2ou03"]

[ext_resource type="Script" uid="uid://bsttqds8sa6e0" path="res://quest/quest_ui.gd" id="1_22yjx"]
[ext_resource type="FontFile" uid="uid://c2n4kfcpjctac" path="res://assets/fonts/Super Tasty Italic.ttf" id="2_xf6ga"]
[ext_resource type="FontFile" uid="uid://5nmyag7737fq" path="res://assets/fonts/Super Tasty.ttf" id="3_8wqdn"]
[ext_resource type="Texture2D" uid="uid://d0f8fkb5oe48o" path="res://assets/placeholder_temp/trash.png" id="4_8wqdn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1oaoy"]
bg_color = Color(0.733333, 0.278431, 0.756863, 1)

[node name="QuestUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -320.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_22yjx")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_right = 320.0
offset_bottom = 480.0

[node name="Backgrounds" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_right = 320.0
offset_bottom = 480.0

[node name="BG_1" type="Panel" parent="CanvasLayer/Panel/Backgrounds"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1oaoy")

[node name="Contents" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Headings" type="HBoxContainer" parent="CanvasLayer/Panel/Contents"]
layout_mode = 2

[node name="List" type="Label" parent="CanvasLayer/Panel/Contents/Headings"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_xf6ga")
theme_override_font_sizes/font_size = 25
text = "Quests"
horizontal_alignment = 1

[node name="Details" type="HBoxContainer" parent="CanvasLayer/Panel/Contents"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="QuestDetails" type="VBoxContainer" parent="CanvasLayer/Panel/Contents/Details"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="QuestTitle" type="Label" parent="CanvasLayer/Panel/Contents/Details/QuestDetails"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_8wqdn")
text = "Title"
horizontal_alignment = 1

[node name="QuestDescription" type="Label" parent="CanvasLayer/Panel/Contents/Details/QuestDetails"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_8wqdn")
text = "Description"

[node name="QuestObjectives" type="VBoxContainer" parent="CanvasLayer/Panel/Contents/Details/QuestDetails"]
layout_mode = 2

[node name="QuestRewards" type="VBoxContainer" parent="CanvasLayer/Panel/Contents/Details/QuestDetails"]
layout_mode = 2

[node name="Trash Quest Empty" type="Sprite2D" parent="CanvasLayer/Panel/Contents"]
visible = false
position = Vector2(153, 63)
scale = Vector2(0.436957, 0.0654158)
texture = ExtResource("4_8wqdn")

[node name="Trash Quest Done" type="Sprite2D" parent="CanvasLayer/Panel/Contents"]
visible = false
position = Vector2(152, 119)
scale = Vector2(0.436957, 0.0654158)
texture = ExtResource("4_8wqdn")

[node name="Tag Quest Empty" type="Sprite2D" parent="CanvasLayer/Panel/Contents"]
visible = false
position = Vector2(153, 63)
scale = Vector2(0.436957, 0.0654158)
texture = ExtResource("4_8wqdn")

[node name="Tag Quest Done" type="Sprite2D" parent="CanvasLayer/Panel/Contents"]
visible = false
position = Vector2(152, 119)
scale = Vector2(0.436957, 0.0654158)
texture = ExtResource("4_8wqdn")
